--- a/genindex.html
+++ b/genindex.html
@@ -173,6 +173,8 @@
            </div>
           </div>
           
+            <div id="disqus_thread"></div>
+          
           <footer>
   
 
@@ -227,6 +229,25 @@
       });
   </script>
   
+
+  
+
+    <script>
+      var disqus_config = function () {
+        this.page.url = window.location.href.replace(/\?.*/, '');
+        this.page.identifier = "Index";
+        this.page.title = "Index";
+      };
+      (function() {
+        var d = document, s = d.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = '//pawamoy.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
    
 
