--- a/search.html
+++ b/search.html
@@ -178,6 +178,8 @@
            </div>
           </div>
           
+            <div id="disqus_thread"></div>
+          
           <footer>
   
 
@@ -233,6 +235,25 @@
       });
   </script>
   
+
+  
+
+    <script>
+      var disqus_config = function () {
+        this.page.url = window.location.href.replace(/\?.*/, '');
+        this.page.identifier = "Search";
+        this.page.title = "Search";
+      };
+      (function() {
+        var d = document, s = d.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = '//pawamoy.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
   
   <script type="text/javascript">
